# bakbak

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  system-history.yml
docs/: architecture.md  progress.md
docs/plans/: 0001-bakbak-desktop-v1.md  0002-voice-video-and-presence.md  0003-screen-sharing.md  0004-warm-adda-ui-settings-channels-arm64.md  0005-voice-chat-mentions-settings-accents.md  0006-discord-shaped-bakbak-hearted-ui.md  0007-voice-join-acceleration-and-soundboard-polish.md  0008-rich-animated-profiles.md  0009-signal-red-theme-and-interface-audio.md  0010-cross-platform-screen-share-and-focus.md  0011-soundboard-categories-favorites-and-uploads.md  0012-unlucky-boys-channel-layout.md  0013-local-microphone-processing-and-voice-lab.md  0014-bakbak-signature-shell-personal-dms-live-watching.md  0015-screen-share-reliability-and-call-layout.md  0016-flat-monochrome-roundo.md  0017-space-efficient-titlebar-and-comfortable-roundo.md  0018-native-glass-edge-to-edge-motion.md  0019-discord-inspired-controls-and-member-rail.md  0020-bakbak-orbit-branding.md  0021-instant-workspace-local-cache-and-voice-acceleration.md  0022-rich-messaging-media-replies-stickers.md  0023-modern-interface-audio.md  0024-collapsible-channel-tree.md  0025-conversation-root-and-message-trail.md  0026-system-adaptive-unified-accent.md  0027-system-channels-link-previews-and-deafen-audio.md  0028-bakbak-1-0-interaction-and-loading-polish.md
public/: theme-init.js
scripts/: build-soundboard-ffmpeg-core.sh  channel-tree-layout.test.mjs  check-bundle-secrets.mjs  check-release-env.mjs  conversation-trail-layout.test.mjs  focused-media-layout.test.mjs  generate-interface-sounds.mjs  generate-interface-sounds.test.mjs  glass-shell.test.mjs  loading-screen.test.mjs  monochrome-appearance.test.mjs  release-version.mjs  release-version.test.mjs  set-version-lib.mjs  set-version.mjs  set-version.test.mjs  sync-release-pr.mjs  sync-release-pr.test.mjs  system-accent-layout.test.mjs  verify-updater-manifest.mjs  window-chrome-config.test.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  system_accent.rs
src-tauri/src/screen_share/: mod.rs  platform.rs
src-tauri/src/screen_share/platform/: macos.rs  windows.rs
src/app/: App.test.tsx  App.tsx  native-zoom.test.ts
src/components/: Avatar.tsx  BakbakMark.test.tsx  BakbakMark.tsx  BakbakMotionMark.test.tsx  BakbakMotionMark.tsx  LoadingScreen.test.tsx  LoadingScreen.tsx  Modal.test.tsx  Modal.tsx  PanelResizer.test.tsx  PanelResizer.tsx  ProfileMediaImage.test.tsx  ProfileMediaImage.tsx  ProfilePopover.test.tsx  ProfilePopover.tsx  ProfileTrigger.tsx  SpaceSwitcher.test.tsx  SpaceSwitcher.tsx  UserContextMenu.test.tsx  UserContextMenu.tsx  WindowTitlebar.test.tsx  WindowTitlebar.tsx
src/lib/: app-version.ts  auth-service.ts  channel-service.test.ts  channel-service.ts  communication-effects.ts  connectivity.test.ts  connectivity.ts  direct-message-service.test.ts  direct-message-service.ts  env.ts  giphy-service.test.ts  giphy-service.ts  link-preview.test.ts  link-preview.ts  local-cache.test.ts  local-cache.ts  message-media-service.test.ts  message-media-service.ts  mock-data.ts  presence-service.test.ts  presence-service.ts  profile-media-cache.test.ts  (+14 more)
supabase/: README.md  config.toml  deno.json  seed.sql
(+204 files in other folders)
