[package]
name = "bakbak"
version = "0.9.0"
description = "Private voice, text, and soundboard desktop app"
authors = ["Bakbak contributors"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bakbak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "macos")'.build-dependencies]
webrtc-sys-build = "=0.3.18"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
livekit = { version = "=0.7.51", features = ["rustls-tls-native-roots"] }
os_info = "3.15"
screencapturekit = { version = "=8.0.0", features = ["async", "macos_14_0"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
