[package]
name = "bakbak"
version = "0.16.0"
description = "Private voice, text, and soundboard desktop app"
authors = ["Bakbak contributors"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bakbak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
webrtc-sys-build = "=0.3.18"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
core-graphics = "0.25"
libc = "0.2"
livekit = { version = "=0.7.51", features = ["rustls-tls-native-roots"] }
objc2 = "0.6.2"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSColor", "NSColorSpace"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSNotification", "NSOperation", "NSString", "block2"] }
os_info = "3.15"
screencapturekit = { version = "=8.0.0", features = ["async", "macos_14_0"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[target.'cfg(target_os = "windows")'.dependencies]
livekit = { version = "=0.7.51", features = ["rustls-tls-native-roots"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
wasapi = "=0.23.0"
windows = { version = "0.62.2", features = [
  "Foundation",
  "Graphics",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "UI_ViewManagement",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
  "Win32_UI_WindowsAndMessaging",
] }
windows-version = "=0.1.7"
